objects/amc__Product_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>amc__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Milestone that will be added as part of the work required to deliver this Product when auto-generating a new Project from the Opportunity</inlineHelpText>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>amc__Milestone__c.amc__Project__r.amc__Template__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>amc__Milestone__c</referenceTo>
        <relationshipName>Product_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Product that will require this Milestone as part of the work required to be delivered on the Project when this Product is associated to an Opportunity</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Product_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Project_Unit__c</fullName>
        <inlineHelpText>Identifies the unit of measure for calculating the total Hours required on the Actions required for this Product &amp; Milestone</inlineHelpText>
        <label>Project Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Source</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Milestone</label>
    <nameField>
        <displayFormat>PMID-{000000}</displayFormat>
        <label>PMID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>